2006-03-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/system-start-text.cc (print): suicide if we don't have any
	elements. Fixes hara kiri'd instrument names.

	* scripts/mup2ly.py (Module): remove.

2006-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/global.itely (A single music expression):
	close @lilypond properly

	* lily/volta-bracket.cc (modify_edge_height): change from
	after_line_breaking_callback. Suicide last bracket if appropriate.
 
	* python/lilylib.py: strip getopt support

	* scripts/etf2ly.py (do_options): use optparse

	* scripts/midi2ly.py: optparse, strip lilylib copy. 

	* scripts/abc2ly.py (voices): use optparse.

	* stepmake/stepmake/generic-vars.make: new function absdir.

	* scripts/convert-ly.py (bindir): use optparse, argv[0] relocation.

	* scripts/lilypond-book.py (find_file): use global_options for
	include path

	* scm/ps-to-png.scm (ps-page-count): prevent null characters
	entering C code.

2006-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py (get_global_option): ughness for extracting
	global options from lilylib.
	(NonDentedHeadingFormatter.format_heading): move from musicxml2ly

	* scripts/lilypond-book.py (get_option_parser): use optparse for
	option handling.  Put options in global_options variable.

2006-02-28  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: clarify.

2006-02-28  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/layout-page-layout.scm (write-page-breaks): add a
	music-system-heights property to the page layout output.

	* scm/page.scm (make-page-stencil): take footer into account when
	computing the 'space-left page property
	(annotate-space-left): take footer into account when annonating
	space left.

2006-02-28  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ advanced-notation, global: more (final)
	docs for music expressions, removed special fermatas.

2006-02-27  Graham Percival  <gpermus@gmail.com>
