@@ -1,5 +1,12 @@
 2006-03-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* stepmake/aclocal.m4 (depth): fix bashism.
+
+	* lily/lyric-combine-music-iterator.cc: move from
+	new-lyric-combine-iterator.cc
+	(process): add pending_grace_lyric_ member to delay lyrics on
+	grace notes.
+
 	* lily/system-start-text.cc (print): suicide if we don't have any
 	elements. Fixes hara kiri'd instrument names.
 
